search results spacing fix

--- a/media/css/mkt/desktop-filters.less
+++ b/media/css/mkt/desktop-filters.less
@@ -76,6 +76,7 @@
         }
     }
     #search-results {
+        padding: 30px 0;
         h1 {
             margin-bottom: 10px;
         }
